# Firmware

./: CMakeLists.txt  Doxyfile  README.md  partitions.csv  sdkconfig
docs/html/: CMakeFiles_23_822_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  CMakeFiles_23_822_81_2CompilerIdC_2CMakeCCompilerId_8c.html  README_8md.html  annotated.html  bootloader_2CMakeFiles_23_822_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  bootloader_2CMakeFiles_23_822_81_2CompilerIdC_2CMakeCCompilerId_8c.html  bootloader_2config_2sdkconfig_8h.html  bootloader_2config_2sdkconfig_8h_source.html  bootloader_2project__elf__src__esp32s3_8c.html  classes.html  config_2sdkconfig_8h.html  config_2sdkconfig_8h_source.html  dir_16cd375328abb2f371198fccef29fd98.html  dir_2d8cd51e8485dc4719e06ff2a2be0684.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_50d9a97f32beba571f67669aceb143d9.html  dir_517b432c5cc8121204403a5913445cf4.html  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_8165d963cd765c284d618d89479b5e59.html  dir_95184fd9bed3ca1f63a503303d942f41.html  dir_bb72e506cbd8e3d617e422fdbeaa6854.html  dir_c6ef69ba2a0993bf73d8aa3d755b7427.html  dir_c8e4a6cd3babdd6fce1630fe3d091130.html  dir_e1a715d407a4074a9fa63b2e02ec2b8f.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  error_8c.html  error_8c__incl.dot  (+111 more)
main/: CMakeLists.txt  global.h  motor_control.c  motor_control.h  motor_controller.c  schedule.c  schedule.h  storage.c  storage.h  time_util.c  time_util.h  types.h  webserver.c  webserver.h  wifi_ap.c  wifi_ap.h
(+166 files in other folders)
